# quixly

./: .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: .env.example  README.md  alembic.ini  pyproject.toml  shopify.app.toml
agent/alembic/: env.py
agent/alembic/versions/: 11a93152cf9c_audits.py  1510be4b0e2c_fixes.py  163cd3cc9b7f_query_panels_engine_runs.py  3a697237e7f0_shops_products_ingest_runs.py  4d303431605b_agent_runs_run_id.py  9b4947bc6fbb_audits_structured_coverage.py  bf3d47f7b07f_products_product_type_category.py  f3f760e6f250_share_of_model.py  fd51f9b101b6_share_of_model_run_id.py
agent/app/: db.py  main.py  redis.py  settings.py  worker.py
agent/app/api/: deps.py  products.py  scan.py  shops.py  webhooks.py
agent/app/graph/: README.md  audit.py  engine_runner.py  extractor.py  interrogator.py  optimizer.py  share_of_model.py
agent/app/jobs/: fix.py  ingest_catalog.py  scan.py
agent/app/models/: __init__.py  agent_run.py  audit.py  base.py  engine_run.py  fix.py  ingest_run.py  product.py  query_panel.py  share_of_model.py  shop.py
agent/app/services/: audit_rubric.py  catalog.py  extractor_llm.py  matching.py  optimizer_llm.py  panels.py  perplexity.py  runs.py  shopify_admin.py  token_provider.py
agent/scripts/: run_optimizer_batch.py  seed_optimizer_demo.py
agent/tests/: conftest.py  test_audit.py  test_audit_route.py  test_audit_rubric.py  test_catalog.py  test_engine_runner.py  test_extractor.py  test_extractor_live.py  test_fix_job.py  test_ingest_catalog.py  test_internal_auth.py  test_interrogator.py  test_matching.py  test_optimizer.py  test_optimizer_grounding.py  test_optimizer_llm.py  test_perplexity_live.py  test_report_route.py  test_runs.py  test_scan_route.py  test_scan_task.py  test_share_of_model.py  test_shopify_admin.py  test_shops_connect.py  test_token_provider.py  test_webhooks.py
app/: .env.example  package.json  shopify.app.toml  shopify.web.toml  vitest.config.ts
app/app/: app-bridge.d.ts  shopify.server.ts
app/prisma/: schema.prisma
app/tests/: admin-token-rotation.test.ts  agent-client.test.ts  app.audit.test.ts  internal-admin-token.test.ts
docs/: backlog.md
docs/session-log/: 2026-07-11-phase-0-scaffold.md  2026-07-12-phase-1-connect.md  (+4 more)
(+12 files in other folders)
