[project]
name = "quixly-agent"
version = "0.1.0"
description = "Quixly agent service — FastAPI + LangGraph brain (engine querying, simulation, diagnosis, grounded optimization, verification)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "arq>=0.26",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
