[project]
name = "quixly-agent"
version = "0.1.0"
description = "Quixly agent service — FastAPI + LangGraph brain (engine querying, simulation, diagnosis, grounded optimization, verification)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "greenlet>=3.1",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "fakeredis>=2.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic writes migrations from its own template (long lines, `Union[...]`). They are
# generated artifacts, not hand-written code — don't hold them to our style.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "live: hits a real external API; opt-in, skipped unless the relevant key is set (not run in CI)",
]
